--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "axios": "^1.7.7",
+    "axios-retry": "^4.5.0",
     "isotope-layout": "^3.0.6",
     "next": "13.1.2",
     "react": "18.2.0",
