--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.29.0",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "wowjs": "^1.1.3"
   }
 }
