--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@next/font": "13.1.2",
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
+    "html2canvas": "^1.4.1",
     "isotope-layout": "^3.0.6",
+    "jspdf": "^2.5.2",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-bootstrap": "^1.6.1",
