--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.2",
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
+    "bootstrap": "^5.3.3",
     "html2canvas": "^1.4.1",
     "isotope-layout": "^3.0.6",
     "jspdf": "^2.5.2",
