--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "html2canvas": "^1.4.1",
     "isotope-layout": "^3.0.6",
     "jspdf": "^2.5.2",
+    "jwt-decode": "^4.0.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-bootstrap": "^1.6.1",
@@ -23,6 +25,7 @@
     "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.5",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
