--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^10.0.5",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "swipe": "^1.7.7",
     "swiper": "^11.1.14",
     "wowjs": "^1.1.3"
   }
