--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.8.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.5",
     "react-visibility-sensor": "^5.1.1",
