--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "isotope-layout": "^3.0.6",
     "jspdf": "^2.5.2",
     "jwt-decode": "^2.2.0",
-    "next": "13.1.2",
+    "next": "^14.2.14",
     "react": "18.2.0",
     "react-bootstrap": "^1.6.1",
     "react-circular-progressbar": "^2.1.0",
