--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@next/font": "13.1.2",
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
