--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.5",
     "react-visibility-sensor": "^5.1.1",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swipe": "^1.7.7",
     "swiper": "^11.1.14",
